--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
       <p>Please fill out this form to become a member.</p>
 
       <p class="input-label">Username: <span>*</span></p>
-      <input type="text" />
+      <input type="text" id="usernameInput" />
 
       <p class="input-label">Password: <span>*</span></p>
-      <input type="password" />
+      <input type="password" id="passwordInput" />
 
       <p class="input-label">Confirm Password: <span>*</span></p>
-      <input type="password" />
+      <input type="password" id="passwordConfirm" />
 
       <p>
         <button id="sign-up-btn">Sign Up</button>
