--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
       <p>Please fill out this form to sign in.</p>
 
       <p class="input-label">Username: <span>*</span></p>
-      <input type="text" />
+      <input type="text" id="usernameSignIn" />
 
       <p class="input-label">Password: <span>*</span></p>
-      <input type="password" />
+      <input type="password" id="passwordSignIn" />
 
       <p>
         <button id="sign-in-btn">Sign In</button>
